[package]
name = "sus"
version = "0.0.0"
edition = "2021"

[features]
default = [ "log", "sus" ]
sus = [ "structopt", "which" ]
log = []
log_fail_msg = [ "log" ]

[[bin]]
name = "sus-kernel"

[[bin]]
name = "sus"
required-features = [ "sus" ]

[dependencies]
nix = "0.23.0"
serde = { version="1.0.130", features = ["derive"] }
serde_json = "1.0.67"
users = "0.11.0"
structopt = { version="0.3.25", optional = true }
which = { version="4.2.2", optional = true }
